--- a/app/views/notifications/confirmation.erb
+++ b/app/views/notifications/confirmation.erb
@@ -2,5 +2,5 @@ Dear <%= Student.find(@student_id).name -%>,
 <br /><br />
 <%= render :partial => "bootcamps/confirmation_blurb", :locals => {:student_id => @student_id, :bootcamp_id => @bootcamp_id} %>
 <br /><br />
-Registration
+Registration<br />
 GRE Bootcamp Math Review
