--- a/app/views/bootcamps/_confirmation_blurb.erb
+++ b/app/views/bootcamps/_confirmation_blurb.erb
@@ -14,14 +14,6 @@ Thank you for registering in a GRE Bootcamp Math Review Session.  Here is your r
       <td><%= Bootcamp.find(bootcamp_id).city -%></td>
     </tr>
     <tr>
-      <td>Building:</td>
-      <td><%= Bootcamp.find(bootcamp_id).building -%></td>
-    </tr>
-     <tr>
-        <td>Room:</td>
-        <td><%= Bootcamp.find(bootcamp_id).room -%></td>
-      </tr>
-    <tr>
       <td>Date:</td>
       <td><%= Bootcamp.find(bootcamp_id).date -%></td>
     </tr>
@@ -29,8 +21,12 @@ Thank you for registering in a GRE Bootcamp Math Review Session.  Here is your r
       <td>Time:</td>
       <td><%= Bootcamp.find(bootcamp_id).time -%></td>
     </tr>
+    <tr><td>&nbsp;</td><td></td></tr>
+     <tr>
+        <td colspan="2"><%= Bootcamp.find(bootcamp_id).message -%></td>
+      </tr>
   </table>
 <br />
 <br />
-Any updates to this Review Session (for example, the location) will be emailed to you.  If you have any questions or comments, you can
+Any updates to this Review Session (for example, the building / room) will be emailed to you.  If you have any questions or comments, you can
 always reach us at support@grebootcamp.com.
