--- a/app/views/bootcamps/_links.html.erb
+++ b/app/views/bootcamps/_links.html.erb
@@ -12,7 +12,7 @@
     <h3 style="color:#8A0300">Math Review from ETS</h3>
     <p>Download a booklet containing a full GRE Math review provided by ETS.</p>
     <small>Posted on September 1, 2009</small>
-    <%= link_to 'Download', 'www.ets.org/Media/Tests/GRE/pdf/GREmathPractice.pdf', :class => "read-more", :target => "_blank" %>
+    <%= link_to 'Download', 'http://www.ets.org/Media/Tests/GRE/pdf/GREmathPractice.pdf', :class => "read-more", :target => "_blank" %>
   </div>
 
   <div class="news-block">
