--- a/app/views/bootcamps/index.html.erb
+++ b/app/views/bootcamps/index.html.erb
@@ -70,8 +70,8 @@
 
     Note that each image has a different ID: image-1, image-2, etc.
     They must be listed like this for the Image Looper to work. -->
-    <img id="image-1" src="/images/photo.jpg" alt="Image 1" />
-    <img id="image-2" src="/images/photo.jpg" alt="Image 2" />
+    <img id="image-1" src="/images/ipod.jpg" alt="Image 1" />
+    <img id="image-2" src="/images/ipod.jpg" alt="Image 2" />
     <img id="image-3" src="/images/ipod.jpg" alt="Image 3" />
   </div>
 
